Added track posts, wall view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,9 @@
-<h1>Home Page</h1>
+<h1>Wall of Music</h1>
+
+<div>
+  <a href="/posts">View all posts</a>
+</div>
+
+<div>
+  <a href="/posts/new">Post a track</a>
+</div>
