--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,9 @@
 <h1>Wall of Music</h1>
-
+<hr/>
 <div>
-  <a href="/posts">View all posts</a>
+  <a href="/posts" class="btn btn-info" role="button">View all posts</a>
 </div>
-
+<hr/>
 <div>
-  <a href="/posts/new">Post a track</a>
+  <a href="/posts/new" class="btn btn-info" role="button">Post a track</a>
 </div>
