--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,36 +1,40 @@
-<h1>Post a Track!</h1>
+<h1>Post a Track</h1>
 <hr/>
 
 <% if @track.errors.any? %>
-	<div>
-		<strong>Some issues with your track, please fix them:</strong>
-		<ul>
+	<div class="panel panel-danger">
+		<div class="panel-heading">
+			<strong class="panel-title">Some issues with your track, please fix them:</strong>
+		</div>
+		<ul class="list-group">
 			<% @track.errors.full_messages.each do |track| %>
-				<li><%= track %></li>
+				<li class="list-group-item"><%= track %></li>
 			<% end %>
 		</ul>
 	</div>
 <% end %>
 
 <form method="post" action="/posts">
-	<div>
+	<div class="input-group" style="width:300px;">
 		<label>Author:</label>
-		<input type="text" name="author" value="<%= @track.author %>">
+		<input type="text" placeholder="User's name" class="form-control" name="author" value="<%= @track.author %>">
 	</div>
-	<div>
+	<div class="input-group" style="width:300px;">
 		<label>Track title:</label>
-		<input type="text" name="title" value="<%= @track.title %>">
+		<input type="text" class="form-control" name="title" value="<%= @track.title %>">
 	</div>
-	<div>
+	<div class="input-group" style="width:300px;">
 		<label>Artist:</label>
-		<input type="text" name="artist" value="<%=@track.artist %>">
+		<input type="text" class="form-control" name="artist" value="<%=@track.artist %>">
 	</div>
-	<div>
+	<div class="input-group" style="width:300px;">
 		<label>URL:</label>
-		<input type="text" name="url" value="<%= @track.url %>">
+		<input type="text" class="form-control" name="url" value="<%= @track.url %>">
 	</div>
-	<div>
-		<input type="submit" value="Submit">
+	<p></p>
+	<div class="input-group">
+		<input type="submit" class="form-control" value="Post">
  	</div>
 </form>
-<a href="/">Home</a>
+<p></p>
+<a href="/" class="btn btn-info" role="button">Home</a>
