Updated style. Embedded videos to posts page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,16 @@
-<h1>Wall of Music</h1>
-<hr/>
-<div>
-  <a href="/posts" class="btn btn-info" role="button">View all posts</a>
+<div class="jumbotron">
+  <h1>Wall of Music</h1>
+  <p>A simple website to share and listen to music</p>
 </div>
 <hr/>
 <div>
-  <a href="/posts/new" class="btn btn-info" role="button">Post a track</a>
+  <a href="posts" class="btn btn-info">
+    <span class="glyphicon glyphicon-music"></span> View all posts
+  </a>
+</div>
+<hr/>
+<div>
+  <a href="posts/new" class="btn btn-info">
+  	<span class="glyphicon glyphicon-plus"></span> Post a track
+  </a>
 </div>
