--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,4 +1,6 @@
-<h1>Post a Track</h1>
+<div class="page-header">
+	<h1>Post a Track</h1>
+</div>
 <hr/>
 
 <% if @track.errors.any? %>
@@ -33,7 +35,7 @@
 	</div>
 	<p></p>
 	<div class="input-group">
-		<input type="submit" class="form-control" value="Post">
+		<button type="submit" class="btn btn-info">Post</button>
  	</div>
 </form>
 <p></p>
