--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -9,5 +9,7 @@
 </p>
 
 <hr/>
-<a href="/posts" class="btn btn-info" role="button">Back to All Tracks</a>
+<a href="/posts" class="btn btn-info">
+	<span class="glyphicon glyphicon-music"></span> Back to all tracks
+</a>
 <a href="/" class="btn btn-info" role="button">Home</a>
