--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,6 +21,30 @@
   <title></title>
 </head>
 <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">WallOfMusic</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/posts/new">Post a track</a>
+      </li>
+      <li>
+        <a href="/posts">View all tracks</a>
+      </li>
+      <li>
+        <a href="/login">Log In</a>
+      </li>
+      <li>
+        <a href="/signup">Sign Up</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <%= yield %>
 </body>
 </html>
