--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,4 +1,4 @@
-<h1><%= @track.title %></h1>
+<h1><%= @track.title %> <small>By: <%= @track.artist %> </small></h1>
 
 <p>
 	<strong>Author:</strong> <%= @track.author %>
@@ -12,4 +12,3 @@
 <a href="/posts" class="btn btn-info">
 	<span class="glyphicon glyphicon-music"></span> Back to all tracks
 </a>
-<a href="/" class="btn btn-info" role="button">Home</a>
