--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -42,6 +42,9 @@
       <li>
         <a href="/signup">Sign Up</a>
       </li>
+      <li>
+        <a href="/logout">Log Out</a>
+      </li>
     </ul>
   </div>
 </nav>
