--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,10 @@
-<div class="jumbotron">
-  <h1>Wall of Music</h1>
-  <p>A simple website to share and listen to music</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="jumbotron">
+        <h1>WallOfMusic</h1>
+        <p>A simple website to share and listen to music</p>
+      </div>
+    </div>
+  </div>
 </div>
