--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,7 +1,12 @@
-<div class="page-header">
-	<h1>Signup</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="jumbotron">
+        <h1>Sign Up</h1>
+      </div>
+    </div>
+  </div>
 </div>
-<hr/>
 
 <% if @user && @user.errors.any? %>
 	<div class="panel panel-danger">
@@ -27,11 +32,11 @@
 	</div>
 	<div class="input-group" style="width:300px;">
 		<label>Password:</label>
-		<input type="text" class="form-control" name="password">
+		<input type="password" class="form-control" name="password">
 	</div>
 	<div class="input-group" style="width:300px;">
 		<label>Confirm password</label>
-		<input type="text" class="form-control" name="password_confirmation">
+		<input type="password" class="form-control" name="password_confirmation">
 	</div>
 	<p></p>
 	<div class="input-group">
