--- a/app/views/tracks/index.erb
+++ b/app/views/tracks/index.erb
@@ -14,7 +14,7 @@
 		</div>
 		<ul class="list-group">
 			<% @review.errors.full_messages.each do |review| %>
-				<li class="list-group-item"><%= review %></li>
+				<li class="list-group-item">You have already created a review for this track!</li>
 			<% end %>
 		</ul>
 	</div>
