--- a/app/views/tracks/index.erb
+++ b/app/views/tracks/index.erb
@@ -1,10 +1,6 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron">
-        <h1>All Tracks</h1>
-      </div>
-    </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">All Tracks</h1>
   </div>
 </div>
 <% if @review && @review.errors.any? %>
@@ -21,41 +17,42 @@
 <% end %>
 
 <% if @tracks %>
-	<% @tracks.each do |track| %>
-		<div class="post">
-			<h3><a href="/tracks/<%= track.id %>"><%= track.title %></a>
-					<small>(by: <%= track.artist %>)</small>
-			</h3>
-			<div class="row">
-				<div class="col-sm-8">
-				<%if track.url?%>
-					<div class="embed-responsive embed-responsive-4by3"  width="300" height="100">
-  					<iframe class="embed-responsive-item" src="<%= track.embeddable_url %>"></iframe>
-					</div>
-				<%end%>
-			</div>
-		</div>
-		<%if (user = User.find_by(id: track.user_id)) %>
-			<h5>Post by: <%= user.username %></h5>
-
-		<%else %>
-			<h5>Post by: Unknown</h5>
-		<%end%>
-		<!--TODO: form with button-->
-		<form action="/upvote/<%= track.id %>" method="post">
-			<button type="submit" class="btn btn-info">Upvote (<%=track.num_votes%>)</button>
-		</form>
-		<p></p>
-		<small>Created at: <%=track.created_at%></small>
-    <form action="tracks/review/<%= track.id %>" method="post">
-      <button type="submit" class="btn btn-info">Submit a Review</button>
-    </form>
-		<hr/>
-		</div>
-	<% end %>
+  <div class="row">
+  	<% @tracks.each do |track| %>
+    <div class="col-md-4">
+  	  <h3><a href="/tracks/<%= track.id %>"><%= track.title %></a>
+  	    <small>(by: <%= track.artist %>)</small>
+  	  </h3>
+  		<%if track.url?%>
+  		  <div class="embed-responsive embed-responsive-4by3"  width="300" height="100">
+    		    <iframe class="embed-responsive-item" src="<%= track.embeddable_url %>"></iframe>
+  			</div>
+      <% else %>
+        <div class="embed-responsive embed-responsive-4by3"  width="300" height="100">
+          <iframe class="embed-responsive-item"></iframe>
+        </div>
+  		<%end%>
+  		<%if (user = User.find_by(id: track.user_id)) %>
+  		  <h5>Post by: <%= user.username %></h5>
+  		<%else%>
+  		  <h5>Post by: Unknown</h5>
+  		<%end%>
+  		<form action="/upvote/<%= track.id %>" method="post">
+  		    <button type="submit" class="btn btn-info">Upvote (<%=track.num_votes%>)</button>
+  		</form>
+  		<p></p>
+      <form action="tracks/review/<%= track.id %>" method="post">
+        <button type="submit" class="btn btn-info">Submit a Review</button>
+      </form>
+  		<hr/>
+    </div>
+    <% end %>
+  </div>
 <% else %>
-	<h3>You have no tracks at the moment!</h3>
+  <h3>You have no tracks at the moment!</h3>
 <% end %>
+
+
 <hr/>
 <a href="tracks/new" class="btn btn-info">
 	<span class="glyphicon glyphicon-plus"></span> Post
