--- a/app/views/tracks/show.erb
+++ b/app/views/tracks/show.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-	<em><%= @track.url %></em>
+	<em><a href=<%= @track.url %>><%= @track.url %></a></em>
 </p>
 
 <hr/>
@@ -16,9 +16,9 @@
 <hr/>
 <% if track_reviews = @track.get_all_reviews %>
 		<% track_reviews.each do |review| %>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title">
+			<div class="row" id="review-div">
+				<div class="col-md-6">
+					<h3>
 						<%= User.find_by(id: review.user_id).username %>'s review
 					</h3>
 					<% if review.user_id == current_user.id %>
@@ -26,15 +26,16 @@
 							<button type="submit" class="btn btn-danger" id="delete-button">Delete</button>
 						</form>
 					<% end %>
+					<p>
+						<%= review.content %>
+					</p>
+					<strong>
+						<% if review.rating %>
+							Rating: <%= review.rating %>
+						<% end %>
+					</strong>
+					<hr/>
 				</div>
-				<div class="panel-body">
-					<%= review.content %>
-				</div>
-				<div class="panel-footer">
-					<% if review.rating %>
-						Rating: <%= review.rating %>
-					<% end %>
-				</div>
-			</div>
-		<% end %>
+		</div>
+	<% end %>
 <% end %>
