--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,6 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron">
-        <h1>WallOfMusic</h1>
-        <p>A simple website to share and listen to music</p>
-      </div>
-    </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Wall of Music</h1>
+    <p class="lead">A simple website to share and listen to music</p>
   </div>
 </div>
