--- a/app/views/tracks/review.erb
+++ b/app/views/tracks/review.erb
@@ -1,10 +1,6 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron">
-        <h1><%= @track.title %> Review</h1>
-      </div>
-    </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3"><%=@track.title Review</h1>
   </div>
 </div>
 
